Quiz and links are buttons now

--- a/quiz-main.html
+++ b/quiz-main.html
@@ -31,13 +31,13 @@
                     <li id="no-scores" class="text-gray-500">No quizzes completed yet.</li>
                 </ul>
             </div>
-            <button id="reset-all-scores" class="btn btn-tactile w-full mt-4">Reset All Scores</button>
+            <button id="reset-all-scores" class="btn btn-secondary w-full mt-4">Reset All Scores</button>
         </div>
 
         <div id="quiz-screen" class="hidden">
             <div class="card-question">
                 <div class="flex justify-between items-center mb-4 text-gray-600">
-                    <span id="quiz-title" class="font-semibold">Quiz X</span>
+                    <span id="quiz-title" class="btn btn-secondary">Quiz X</span>
                     <span id="score" class="font-semibold">Question: 0 / 0</span>
                 </div>
                 <div id="question-container" class="text-center mb-6">
@@ -47,7 +47,7 @@
                         <!-- Options will be dynamically populated here -->
                     </div>
                 </div>
-                <button id="submit-answer" class="btn btn-tactile w-full mb-4 hidden">Submit Answer</button>
+                <button id="submit-answer" class="btn btn-primary w-full mb-4 hidden">Submit Answer</button>
                 <div id="feedback-message" class="message-box"></div>
             </div>
             <div class="flex justify-start mt-6">
