--- a/quiz-main.html
+++ b/quiz-main.html
@@ -13,25 +13,26 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>   
 </head>
-<body class="flex items-center justify-center min-h-screen p-4">
+<body class="bg-gradient-to-br from-blue-100 via-purple-100 to-pink-100 min-h-screen flex items-center justify-center font-sans">
     <div class="card w-full max-w-2xl mx-auto">
         <button id="mute-button" title="Mute/Unmute Sounds">
             <i class="fas fa-volume-high"></i> </button>
 
         <h1 class="text-3xl font-bold text-center mb-6 text-gray-800">Quranic Words Quiz</h1>
 
-        <div id="start-screen">
+        <div id="start-screen" class="w-full max-w-md mx-auto p-4 bg-white rounded-lg shadow-xl relative">
             <h2 class="text-xl font-semibold mb-4 text-center text-gray-700">Select a Quiz (125 Words)</h2>
             <div class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 gap-3 mb-6">
                 <!-- Dynamically populated buttons for quizzes -->
             </div>
-            <div id="overall-scores" class="mt-6">
+            <button id="toggle-scores-button" class="btn btn-secondary w-full mb-4">Show My Scores</button>
+            <div id="overall-scores" class="mb-6 p-4 bg-gray-50 rounded-lg shadow-inner">
                 <h3 class="text-lg font-semibold mb-3 text-gray-700">Your Scores:</h3>
                 <ul id="score-list" class="score-list max-h-48 overflow-y-auto">
                     <li id="no-scores" class="text-gray-500">No quizzes completed yet.</li>
                 </ul>
+                <button id="reset-all-scores" class="btn btn-danger w-full mt-4 text-xs hidden">Reset All Scores</button>
             </div>
-            <button id="reset-all-scores" class="btn btn-secondary w-full mt-4">Reset All Scores</button>
         </div>
 
         <div id="quiz-screen" class="hidden">
