--- a/quiz-main.html
+++ b/quiz-main.html
@@ -21,6 +21,14 @@
         <h1 class="text-3xl font-bold text-center mb-6 text-gray-800">Quranic Words Quiz</h1>
         <p class="text-center text-gray-600 mb-4">Test your knowledge of Quranic vocabulary!</p>
         
+        <!-- Breadcrumb Navigation -->
+        <div class="w-full max-w-md mx-auto">
+          <nav class="text-sm mb-4 pl-2">
+            <a href="index.html" class="text-blue-600 hover:underline">Home</a>
+            <span class="mx-2 text-gray-400">/</span>
+            <span>Quiz Main</span>
+          </nav>
+        </div>
 
         <div id="start-screen" class="w-full max-w-md mx-auto p-4 bg-white rounded-lg shadow-xl relative">
                         <h2 class="text-xl font-semibold mb-4 text-center text-gray-700">Juz-30 Quiz</h2>
@@ -43,10 +51,9 @@
                     <span id="num-questions-value" class="text-sm text-gray-700">10</span>
                 </div>
             </div>
-            <h2 class="text-xl font-semibold mb-4 text-center text-gray-700">Level-1 Quiz (Commonly used words)</h2>
-            <div class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 gap-3 mb-6">
+            <h2 class="text-xl font-semibold mb-4 text-center text-gray-700 hidden">Level-1 Quiz (Commonly used words)</h2>
+            <div class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 gap-3 mb-6 hidden">
                 <!-- Dynamically populated buttons for quizzes -->
-
             </div>
             <button id="toggle-scores-button" class="btn btn-secondary w-full mb-4">Show My Scores</button>
             <div id="overall-scores" class="mb-6 p-4 bg-gray-50 rounded-lg shadow-inner">
