Landing page created

--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
             Welcome! Choose a quiz mode to get started:
         </div>
         <div class="landing-links">
-            <a href="quiz-main.html">Standard Quiz</a>
-            <a href="quiz-common-words.html">Advanced Quiz</a>
+                        <a href="quiz-main2.html">Surah Fatiha Quiz</a>
+
+            <a href="quiz-common-words.html">Level-1 Common Words Quiz</a>
+                        <a href="quiz-main.html">Juz-30 Quiz</a>
+
         </div>
     </div>
 </body>
